# ner-roberta

./: .gitignore  README.md  leap.yaml  leap_integration.py  pyproject.toml  requirements.txt
ner_roberta/: __init__.py  config.py  data.py  model.py  tokenization.py  train.py
scripts/: export_onnx.py  prepare_data.py
